fixed the responsice on tablet queary

--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -30,7 +30,27 @@
   } /* description */
 
   .description {
-    width: 70ch;
+    width: 100%;
+    text-align: center;
+  }
+  h1 {
+    font-size: clamp(1.75rem, 5vw, 2.75rem);
+  }
+
+  h2 {
+    font-size: clamp(1.25rem, 4vw, 2.5rem);
+  }
+
+  .container {
+    padding: 3.75rem 0.75rem;
+  }
+
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gird-footer {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -54,5 +74,8 @@
   }
   .copyright-content {
     justify-content: center;
+  }
+  .gird-footer {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
